Completed most of Phase 1
